src/ui/lidarr_ui/history/snapshots/managarr__ui__lidarr_ui__history__history_ui_tests__tests__snapshot_tests__history_tab_HistoryItemDetails.snap
---
source: src/ui/lidarr_ui/history/history_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Source Title ▼                                                                 Event Type                    Quality              Date                            
=> Test source title                                                              grabbed                       Lossless             2023-01-01 00:00:00 UTC         
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                         ╭───────────────────────────────────  Details  ───────────────────────────────────╮                                         
                                         │Source Title: Test source title                                                  │                                         
                                         │Event Type: grabbed                                                              │                                         
                                         │Quality: Lossless                                                                │                                         
                                         │Date: 2023-01-01 00:00:00 UTC                                                    │                                         
                                         │Indexer:                                                                         │                                         
                                         │NZB Info URL:                                                                    │                                         
                                         │Release Group:                                                                   │                                         
                                         │Age: 0 days                                                                      │                                         
                                         │Published Date: 1970-01-01 00:00:00 UTC                                          │                                         
                                         │Download Client:                                                                 │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         ╰─────────────────────────────────────────────────────────────────────────────────╯
