src/ui/lidarr_ui/history/snapshots/managarr__ui__lidarr_ui__history__history_ui_tests__tests__snapshot_tests__loading_history_tab_HistoryItemDetails.snap
---
source: src/ui/lidarr_ui/history/history_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                         ╭───────────────────────────────────  Details  ───────────────────────────────────╮                                         
                                         │Source Title:                                                                    │                                         
                                         │Event Type: unknown                                                              │                                         
                                         │Quality:                                                                         │                                         
                                         │Date: 1970-01-01 00:00:00 UTC                                                    │                                         
                                         │No additional details available.                                                 │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         ╰─────────────────────────────────────────────────────────────────────────────────╯
